did a lot of the debugging to deal with the blogs and gallery

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,30 +15,14 @@ body {font-family: "Lato", sans-serif}
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
-    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="smallMenuToggle()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="{{ url_for('other.home') }}" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="{{ url_for('other.resume') }}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Resume</a>
-    <a href="{{ url_for('blogs.projects', blog='', subcategory='') }}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Projects</a>
-    <a href="{{ url_for('blogs.travel', subcategory='', blog='') }}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Travel</a>
-    <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>
-      <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="#" class="w3-bar-item w3-button">Merchandise</a>
-        <a href="#" class="w3-bar-item w3-button">Extras</a>
-        <a href="#" class="w3-bar-item w3-button">Media</a>
-      </div>
-    </div>
-    <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
+    <a href="{{ url_for('blogs.projects') }}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Projects</a>
+    <a href="{{ url_for('blogs.travel') }}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Travel</a>
+    <a href="{{ url_for('photos.gallery') }}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Photos</a>
   </div>
 </div>
 
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="{{ url}}" class="w3-bar-item w3-button w3-padding-large" onclick="smallMenuToggle()">BAND</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="smallMenuToggle()">TOUR</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="smallMenuToggle()">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="smallMenuToggle()">MERCH</a>
-</div>
 
 <br><br>
 
@@ -58,17 +42,6 @@ body {font-family: "Lato", sans-serif}
   <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
-<script>
-// Used to toggle the menu on small screens when clicking on the menu button
-function smallMenuToggle() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else {
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
-</script>
 
 </body>
 </html>
