--- a/app/templates/travel.html
+++ b/app/templates/travel.html
@@ -15,10 +15,10 @@
         {% for blog in blogs %}
           <h2> {{ blog.name }} </h2>
           <p> {{ blog.content }} </p>
-          <a href={{ "url_for(blogs.gallery)", id=blog.id}}>View</a>
-          {% if logged_in = true %}
-            <a href={{ "url_for(blogs.edit_post)", id=blog.id}}>Edit</a>
-            <a href={{ "url_for(blogs.delete_post)", id=blog.id}}>Delete</a>
+          <a href="{{ url_for('blogs.travel', blog=blog.id) }}">View</a>
+          {% if session['logged_in'] %}
+            <a href="{{ url_for('blogs.edit_post', id=blog.id) }}">Edit</a>
+            <a href="{{ url_for('blogs.delete_post', id=blog.id) }}">Delete</a>
           {% endif %}
 
         {% endfor %}
@@ -32,7 +32,7 @@
       <h1>Categories</h1>
 
       {% for category in categories %}
-        <a href={{ "url_for(blogs.gallery)", id=category.id}}>{{ cateogry.name }}</a>
+        <a href="{{ url_for('blogs.travel', subcategory=category.id) }}">{{ category.name }}</a>
       {% endfor %}
 
     <!-- End Right Column -->
@@ -43,3 +43,5 @@
 
   <!-- End Page Container -->
 </div>
+
+{% endblock %}
