doing more editing

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,11 @@
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
 </style>
 <body>
 
