--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -32,7 +32,7 @@
       <h1>Categories</h1>
 
       {% for category in categories %}
-        <a href="{{ url_for('blogs.travel', subcategory=category.id) }}">{{ category.name }}</a>
+        <a href="{{ url_for('blogs.projects', subcategory=category.id) }}">{{ category.name }}</a>
       {% endfor %}
 
     <!-- End Right Column -->
