--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -14,12 +14,14 @@
       {% if blogs %}
         {% for blog in blogs %}
           <h2> {{ blog.name }} </h2>
-          <p> {{ blog.content }} </p>
-          <a href="{{ url_for('blogs.projects', id=blog.id) }}">View</a>
+          {{ blog.content|safe }}
+          <p>
+          <a href="{{ url_for('blogs.projects', blog=blog.id) }}">View</a>
           {% if session['logged_in'] %}
             <a href="{{ url_for('blogs.edit_post', id=blog.id) }}">Edit</a>
             <a href="{{ url_for('blogs.delete_post', id=blog.id) }}">Delete</a>
           {% endif %}
+          </p>
 
         {% endfor %}
       {% endif %}
@@ -31,9 +33,15 @@
     <div class="w3-third">
       <h1>Categories</h1>
 
+      <div style="overflow-y: scroll; height:400px;">
+        <ul style="list-style-type:none">
       {% for category in categories %}
+      <li>
         <a href="{{ url_for('blogs.projects', subcategory=category.id) }}">{{ category.name }}</a>
+      </li>
       {% endfor %}
+        </ul>
+      </div>
 
     <!-- End Right Column -->
     </div>
