--- a/app/templates/travel.html
+++ b/app/templates/travel.html
@@ -31,9 +31,15 @@
     <div class="w3-third">
       <h1>Categories</h1>
 
+      <div style="overflow-y: scroll; height:400px;">
+        <ul style="list-style-type:none">
       {% for category in categories %}
+      <li>
         <a href="{{ url_for('blogs.travel', subcategory=category.id) }}">{{ category.name }}</a>
+      </li>
       {% endfor %}
+        </ul>
+      </div>
 
     <!-- End Right Column -->
     </div>
