made some more minor adjustments

--- a/app/templates/resume.html
+++ b/app/templates/resume.html
@@ -1,1 +1,174 @@
-<h1>Page under construction</h1>
+{% import "bootstrap/utils.html" as utils %}
+{% extends "base.html" %}
+{% block title %}Projects{% endblock %}
+{% block body %}
+<!-- Page Container -->
+<div class="w3-content w3-margin-top" style="max-width:1400px;">
+  <h1>Kody Rogers</h1>
+
+  <p>117 McNabb Crescent, Regina, Saskatchewan S4S 6A7</p>
+
+  <!-- The Grid -->
+  <div class="w3-row-padding">
+    <!-- Left column -->
+    <div class="w3-third">
+      <p>Cell: 306-921-9628</p>
+    </div>
+
+    <!-- Middle column -->
+    <div class="w3-third">
+      <p>Email: rogers6k@uregina.ca</p>
+    </div>
+
+    <!-- Right column -->
+    <div class="w3-third">
+      <p><a href='linkedin.com/in/kody-rogers-743298113/'>linkedin.com/in/kody-rogers-743298113/</a></p>
+    </div>
+  </div>
+
+  <p>
+    Seeking a position in the technology field requiring strengths in programming, problem-solving, and data analysis.
+    Preferably relating to an industry such as agriculture, research, health care, or business.
+  </p>
+
+  <h2>Relevant Skills & Accomplishments</h2>
+  <h3>Technical</h3>
+  <h4>Programming</h4>
+  <ul>
+    <li>Two years of experience programming in python for various applications</li>
+    <li>C++ programming skills from university classes.</li>
+    <li>Experience in Javascript, PHP, HTML, and CSS.</li>
+  </ul>
+  <h4>Data Analysis</h4>
+  <ul>
+    <li>Experience working with data during two work terms.</li>
+    <li>Currently enrolled in the Junior Lab at the University of Regina.
+      The lab requires the collection and analysis of data</li>
+  </ul>
+
+  <h3>Research & Projects</h3>
+  <h4>Personal Website, 12/2020 - present (Individual, Completed)</h4>
+  <ul>
+    <li>Building a website from scratch to store reports on personal projects and blogs from my travels.</li>
+    <li>Built with Flask, Python, and Jinja</li>
+    <li>It is this website!</li>
+    <li><a href='https://github.com/PhysicsUofRAUI/personalWebsite'>The Github</a></li>
+  </ul>
+  <h4>Bin Temperature Sensor, 2018 - present (Individual, In Development)</h4>
+  <ul>
+    <li>Building a grain temperature monitoring system using an Arduino as the 'brains'.</li>
+    <li>Using an Arduino and making the project public will decrease the cost of setting up
+      grain monitoring systems</li>
+    <li><a href='https://hackaday.io/project/166702-bin-temperature-monitoring-system'>The hackaday page</a></li>
+  </ul>
+
+  <h3>Agriculture</h3>
+  <h4>Family Farm</h4>
+  <ul>
+    <li>Experience driving farm machinery at the family farm.</li>
+    <li>Knowledge of general farm operations from working at the family farm.</li>
+  </ul>
+  <h4>Research</h4>
+  <ul>
+    <li>Experience collecting and analyzing data related to the development
+      of new varieties of crop at the Melfort Agriculture Research Station.</li>
+  </ul>
+
+  <h3>Communication, Team & Self-Management</h3>
+  <h4>Group Work</h4>
+  <ul>
+    <li>Experience dividing up work with group partners.</li>
+    <li>Experience obtaining an understanding with group partners, and working in a cordial manner.</li>
+    <li>This experience was obtained during two group projects while studying in Morocco, and while
+      currently working with two lab partners during the Junior Lab.</li>
+  </ul>
+
+  <h2>Work Experience</h2>
+  <!-- The Grid -->
+  <div class="w3-row-padding">
+    <!-- Left column -->
+    <div class="w3-twothird">
+      <p><b>Trainee</b> - OCAS/ArcelorMittal </p>
+      <p>Ghent, Belgium</p>
+      <p>Supervisor - Nele Van Steenberge</p>
+      <p>Duties:</p>
+      <ul>
+        <li>Performed heat treatments on various samples of steel</li>
+        <li>Studied kinetics using Dilatometry and Differential Scanning Calorimetry of various samples</li>
+        <li>Analyzed the data collected with input from my Supervisor</li>
+      </ul>
+
+    </div>
+
+    <!-- Right column -->
+    <div class="w3-third">
+      <p>June 2018 - November 2018</p>
+    </div>
+  </div>
+
+  <div class="w3-row-padding">
+    <!-- Left column -->
+    <div class="w3-twothird">
+      <p><b>Co - Op Student</b> - Morden Research and Development Centre </p>
+      <p>Government of Canada</p>
+      <p>Morden, MB Canada</p>
+      <p>Supervisor - Frank You</p>
+      <p>Duties:</p>
+      <ul>
+        <li>Made improvements to database applications developed using Flask, and MySQL</li>
+        <li>Added comments and improved documentation of existing code</li>
+        <li>Took various web pages written in HTML and CSS to make a workable website</li>
+      </ul>
+
+    </div>
+
+    <!-- Right column -->
+    <div class="w3-third">
+      <p>January 2018 - April 2018</p>
+    </div>
+  </div>
+
+  <div class="w3-row-padding">
+    <!-- Left column -->
+    <div class="w3-twothird">
+      <p><b>Co – Op Student</b> – Melfort Research Farm</p>
+      <p>Government of Canada</p>
+      <p>Melfort, SK Canada</p>
+      <p>Supervisor – Karen Strukoff</p>
+      <p>Duties:</p>
+      <ul>
+        <li>Collected various forms of data from different crops</li>
+        <li>Cleaned the samples of seed and weeded the plots</li>
+        <li>Assisted Cecil Vera with his research on the relationship of Pasmo disease and lodging in flax</li>
+      </ul>
+
+    </div>
+
+    <!-- Right column -->
+    <div class="w3-third">
+      <p>May 2016 - December 2016</p>
+    </div>
+  </div>
+
+
+  <h2>Education</h2>
+  <h3>Bachelors of Science</h3>
+  <p>Applied Physics</p>
+  <p>University of Regina</p>
+  <p>2014-2020</p>
+
+  <h3>Certificate in Economics</h3>
+  <p>University of Regina</p>
+  <p>2017-2019</p>
+
+
+  <h2>References</h2>
+  <p>Available upon request.</p>
+  <p>My Email: kodyrogers21(at)gmail.com</p>
+
+
+
+
+  <!-- End Page Container -->
+</div>
+{% endblock %}
