fixed a few minor bugs

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,7 @@ textarea {
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
+    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="smallScreenToggle()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="{{ url_for('other.home') }}" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="{{ url_for('other.resume') }}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Resume</a>
     <a href="{{ url_for('blogs.projects') }}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Projects</a>
@@ -33,6 +34,14 @@ textarea {
   </div>
 </div>
 
+<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
+<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+  <a href="{{ url_for('other.home') }}" class="w3-bar-item w3-button w3-padding-large" onclick="smallScreenToggle()">Home</a>
+  <a href="{{ url_for('other.resume') }}" class="w3-bar-item w3-button w3-padding-large" onclick="smallScreenToggle()">Resume</a>
+  <a href="{{ url_for('blogs.projects') }}" class="w3-bar-item w3-button w3-padding-large" onclick="smallScreenToggle()">Projects</a>
+  <a href="{{ url_for('blogs.travel') }}" class="w3-bar-item w3-button w3-padding-large" onclick="smallScreenToggle()">Travel</a>
+  <a href="{{ url_for('photos.gallery') }}" class="w3-bar-item w3-button w3-padding-large" onclick="smallScreenToggle()">Photos</a>
+</div>
 
 <br><br>
 
@@ -49,6 +58,17 @@ textarea {
   <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
+<script>
 
+// Used to toggle the menu on small screens when clicking on the menu button
+function smallScreenToggle() {
+  var x = document.getElementById("navDemo");
+  if (x.className.indexOf("w3-show") == -1) {
+    x.className += " w3-show";
+  } else {
+    x.className = x.className.replace(" w3-show", "");
+  }
+}
+</script>
 </body>
 </html>
