--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -16,7 +16,7 @@
           <img src="{{ url_for('static', filename=photo.filename) }}">
          {{ photo.caption|safe }}
          <p>
-          <a href="{{ url_for('photos.gallery', id=photo.id) }}">View</a>
+          <a href="{{ url_for('photos.gallery', photo=photo.id) }}">View</a>
           {% if session['logged_in'] %}
             <a href="{{ url_for('photos.edit_photo', id=photo.id) }}">Edit</a>
             <a href="{{ url_for('photos.delete_photo', id=photo.id) }}">Delete</a>
