small changes to the resume

--- a/app/templates/resume.html
+++ b/app/templates/resume.html
@@ -6,7 +6,7 @@
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
   <h1>Kody Rogers</h1>
 
-  <p>117 McNabb Crescent, Regina, Saskatchewan S4S 6A7</p>
+  <p>Box 308, Melfort, Saskatchewan S0E 1A0</p>
 
   <!-- The Grid -->
   <div class="w3-row-padding">
@@ -17,7 +17,7 @@
 
     <!-- Middle column -->
     <div class="w3-third">
-      <p>Email: rogers6k@uregina.ca</p>
+      <p>Email: kodyrogers21(at)gmail.com</p>
     </div>
 
     <!-- Right column -->
@@ -47,7 +47,7 @@
   </ul>
 
   <h3>Research & Projects</h3>
-  <h4>Personal Website, 12/2020 - present (Individual, Completed)</h4>
+  <h4>Personal Website, 12/2019 - present (Individual, Completed)</h4>
   <ul>
     <li>Building a website from scratch to store reports on personal projects and blogs from my travels.</li>
     <li>Built with Flask, Python, and Jinja</li>
@@ -164,7 +164,6 @@
 
   <h2>References</h2>
   <p>Available upon request.</p>
-  <p>My Email: kodyrogers21(at)gmail.com</p>
 
 
 
