--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,33 +7,112 @@
 
 <p>
   I am a multi-disciplinary hacker in training. Currently I am looking for a job
-  working in data analysis. I believe that there is enormous opportunity in analyzing
-  data to increase efficiency, making innovations, and benifiting humanity in other ways.
+  working in data analysis, web development, mobile application development or some
+  other technology related job.
 </p>
-
-<h1>What is this Website</h1>
-<h2>Blogs</h2>
 <p>
-  The travel and projects tabs are blogs that describe two very important parts of
-  my life.
-  Blog posts in the travel tab will describe different adventures I have
-  been on while traveling. I have been on three very long trips in my life one to
-  Brazil for one year, another to Morocco for four months, and the most recent one
-  to Belgium for six months.
-
-  The projects tab contains posts documenting projects that I am working during my
-  spare time. These projects could be anything from this website to brewing beer
-  to personal data projects.
+  Technical fields of particular interest to me is blockchain, internet of things,
+  and data analysis. I beleive these three fields will feed off of each other creating
+  new interesting innovations and business models. These three fields have the ability
+  to do that because they compliment each other. The internet of things need to be secured
+  and all the devices that are starting to appear need a way to communicate that everyone
+  trusts, and blockchain can provide that. These connected devices will also be producing
+  and collecting loads of data, and for that data to be utilized new data analysis techniques
+  will have to be developed (e.g. Big Data, and Data mining). Eventually I would love
+  to help usher in these new technologies but for now I will continue developing skills
+  related to any three of those areas.
+</p>
+<p>
+  If you are an employer who has opportunities in which I could do some useful work
+  for you and develop my own skills please contact me at: rogers6k@uregina.ca
 </p>
 
+<h1>What is this Website?</h1>
+<p>
+I have built this website in part to show
+that I can build a website from scratch, and as an example of how I accomplish something
+like that.
+</p>
+
+<p>
+  This website is divided into three main sections (Blogs, Photos, and Resume) which
+  can be accessed via the navigation bar. Below I will explain what each section is and what
+  I am trying to get across with them.
+</p>
+<h2>Blogs</h2>
+<h3>Travel</h3>
+<p>
+  Travel has been a big part of my life so far shown by my travels to Brazil, Belgium,
+  and Morocco. During each of my trips/adventures I have attempted to document the
+  experience the best I can using Google's blogger. Those original blogs can be
+  accessed at the following links:
+  <ul>
+    <li>Brazil: <a href="https://kodybrazil.blogspot.com/">https://kodybrazil.blogspot.com/</a></li>
+    <li>Belgium: <a href="https://belgiuminternship.blogspot.com/">https://belgiuminternship.blogspot.com/</a></li>
+    <li>Morocco: <a href="https://auimoroccoexchange.blogspot.com/">https://auimoroccoexchange.blogspot.com/</a></li>
+  </ul>
+  I am in the process of transfering all those blogs over to this site, but for now
+  everthing is accessible on blogger. I also intend to rewrite all of the Brazil blogs
+  and possibly the Morocco blogs, because my writing has greatly improved since I was
+  on those exchanges.
+</p>
+<h3>Projects</h3>
+<p>
+  This tab will contain blog posts meant to document projects, such as this website,
+  that I am working on. Other projects that I have or am working on are:
+</p>
+<h4>Travel Planning Website</h4>
+<ul>
+  <li>
+    A website built in a similar way to this except designed to help myself and
+    possibly others to plan backpacking trips
+  </li>
+  <li>
+    It will primarily use the WikiVoyage API to fetch possibly excursions restaurants
+    etc. and then allow the user to save the selected outings
+  </li>
+  <li>
+    A significant difference between the Travel Planning App and this website is
+    that I intend to release the Travel Planning App to anyone wanting to plan their trip
+    at a cost to be determined.
+  </li>
+  <li>
+    The way this fits into my long term goals is that it allows me to grow my skills
+    building products and as a programmer.
+  </li>
+  <li>Lots more to come!</li>
+</ul>
+<h4>Bin Temperature Sensor</h4>
+<p>
+  As of right now farmers have two choices when it comes to grain monitoring either
+  pay several thousand dollars per bin to have a computer monitor their grain or monitor
+  it themselves. Monitoring themselves requires time and it is not that accurate
+  so many times the farmer will end up with spoiled grain from the grain heating.
+</p>
+<p>
+  It occured to me that the system that farmers can buy could be made with open source
+  hardware platforms such as Arduino or Raspberry pi. I have set out to design
+  these systems using open source hardware and then publish my results. During the
+  December 2019, January and Feburary 2020 I made significant progress and even had a
+  prototype running inside a empty bin. After that progress was made I slowed down,
+  but now I intend to ramp back up on that proejct. See the blog for more recent
+  updates and below for some relevant outside links!
+</p>
+<ul>
+  <li><a href="https://github.com/PhysicsUofRAUI/binTempSensor">Github</a></li>
+  <li><a href="https://hackaday.io/project/166702-bin-temperature-monitoring-system">Hackaday</a></li>
+</ul>
 <h2>Photos</h2>
 <p>
-  This contains a selection of photos that I have collected overtime
+  This contains a selection of photos that I have collected overtime. Most of these
+  photos are from my travels but possibly some from my projects my creep in. I may
+  even put some in featuring my ice rink or wildlife.
 </p>
 
 <h2>Resume</h2>
 <p>
-  This contains webpage version of my resume for people to view.
+  This contains webpage version of my resume for possible employers or someone
+  who oddly enjoys looking at resumes for fun &#128540;
 </p>
 
 {% endblock %}
