--- a/app/templates/resume.html
+++ b/app/templates/resume.html
@@ -47,12 +47,18 @@
   </ul>
 
   <h3>Research & Projects</h3>
-  <h4>Personal Website, 12/2019 - present (Individual, Completed)</h4>
+  <h4>Personal Website, 12/2019 - present (Individual, Maintenance Phase)</h4>
   <ul>
     <li>Building a website from scratch to store reports on personal projects and blogs from my travels.</li>
     <li>Built with Flask, Python, and Jinja</li>
     <li>It is this website!</li>
     <li><a href='https://github.com/PhysicsUofRAUI/personalWebsite'>The Github</a></li>
+  </ul>
+  <h4>Travel Planning Website, 03/2020 - present (Individual, Specification Phase)</h4>
+  <ul>
+    <li>Forming an idea for a travel planning app/website that will make use of the WikiVoyage API</li>
+    <li>The development will be done using either PHP or Flask for the website, and Kivy will
+      probably be used for the mobile app.</li>
   </ul>
   <h4>Bin Temperature Sensor, 2018 - present (Individual, In Development)</h4>
   <ul>
@@ -75,22 +81,19 @@
   </ul>
 
   <h3>Communication, Team & Self-Management</h3>
-  <h4>Group Work</h4>
   <ul>
-    <li>Experience dividing up work with group partners.</li>
-    <li>Experience obtaining an understanding with group partners, and working in a cordial manner.</li>
-    <li>This experience was obtained during two group projects while studying in Morocco, and while
-      currently working with two lab partners during the Junior Lab.</li>
+    <li>Collaborate effectively and respectfully with group members to ensure completion of tasks (Junior lab, two group projects in Morocco)</li>
+    <li>Communicated research through technical reports (Junior lab, and three work term reports).</li>
+    <li>Presented research and data using powerpoint (one work term, and senior research)</li>
   </ul>
 
-  <h2>Work Experience</h2>
+  <h2>Technical Work Experience</h2>
   <!-- The Grid -->
   <div class="w3-row-padding">
     <!-- Left column -->
     <div class="w3-twothird">
       <p><b>Trainee</b> - OCAS/ArcelorMittal </p>
       <p>Ghent, Belgium</p>
-      <p>Supervisor - Nele Van Steenberge</p>
       <p>Duties:</p>
       <ul>
         <li>Performed heat treatments on various samples of steel</li>
@@ -112,7 +115,6 @@
       <p><b>Co - Op Student</b> - Morden Research and Development Centre </p>
       <p>Government of Canada</p>
       <p>Morden, MB Canada</p>
-      <p>Supervisor - Frank You</p>
       <p>Duties:</p>
       <ul>
         <li>Made improvements to database applications developed using Flask, and MySQL</li>
@@ -134,7 +136,6 @@
       <p><b>Co – Op Student</b> – Melfort Research Farm</p>
       <p>Government of Canada</p>
       <p>Melfort, SK Canada</p>
-      <p>Supervisor – Karen Strukoff</p>
       <p>Duties:</p>
       <ul>
         <li>Collected various forms of data from different crops</li>
@@ -150,6 +151,31 @@
     </div>
   </div>
 
+  <h2>Other Experience</h2>
+  <ul>
+    <li>Customer Service Representative (part-time), Canadian Tire, Melfort, SK (2010 - 2012)</li>
+    <li>Yard Personnel (full-time), Prairie North Co-Op, Melfort, SK Summer (2015)</li>
+    <li>Newspaper Deliverer, Saskatoon Star Phoenix, Melfort, SK (2008 - 2010)</li>
+    <li>Newspaper Deliverer, Melfort Journal, Melfort, SK (2005 - 2008)</li>
+  </ul>
+
+  <h2>Membership and Activities</h2>
+  <h3>Memberships</h3>
+  <ul>
+    <li>Rotaract (2015 - 2017)</li>
+    <li>Computer Science for Innovation, Morocco (2017)</li>
+  </ul>
+  <h3>Volunteer</h3>
+  <ul>
+    <li>Rotary/Rotaract Activities (2012 - present)</li>
+    <li>Engineers Without Borders (2015)</li>
+  </ul>
+  <h3>Interests</h3>
+  <ul>
+    <li>Travel (e.g., Rotary Exchange to Brazil, Exchange semester in Morocco, work term in Belgium)</li>
+    <li>Working on technical projects (e.g. building websites, building helpful devices with Arduino, etc.)</li>
+    <li>Homebrewing, hockey, reading, swimming, running, etc.</li>
+  </ul>
 
   <h2>Education</h2>
   <h3>Bachelors of Science</h3>
